--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 itertools = "0.14"
 directories = "^6.0"
 lazy_static = "^1.5"
+autocorrect = "2"
 
 [target.'cfg(target_os = "linux")'.dependencies]
 gtk = { version = "0.18" }
