--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ members = [
 ]
 
 [workspace.package]
-version = "0.3.0-preview"
+version = "0.3.0"
 publish = false
 license = "Apache-2.0"
 edition = "2024"
